Bug 450579 - Wayland: Can't drag and drop to panel when set to Auto Hide or Dodge Windows
Summary: Wayland: Can't drag and drop to panel when set to Auto Hide or Dodge Windows
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.24.1
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
: 461503 463661 481474 482740 484325 485852 489885 491596 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-19 16:32 UTC by Jan Rathmann
Modified: 2024-08-12 04:21 UTC (History)
15 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Rathmann 2022-02-19 16:32:11 UTC
STEPS TO REPRODUCE
1. Start a Plasma Wayland session
2. Set the default panel to Auto Hide
3. In Dolphin, try to drag a file/folder to the hidden panel

OBSERVED RESULT
The panel stays hidden, thus you can't drag and drop anything to it.

EXPECTED RESULT
The panel shoud unhide like it does on X11, so that you can e.g. drag a file to one of the opened applications.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 21.10 + Kubuntu-Backports-PPA
KDE Plasma Version: 5.24.1
KDE Frameworks Version:  5.91
Qt Version: 5.15.2

Kind regards, Jan
Comment 1 galder 2022-02-20 16:22:01 UTC
Thanks for reporting the issue.
I can confirm the regression in Wayland.

Regards
Comment 2 galder 2022-02-20 16:56:30 UTC
Operating System: Kubuntu 21.10
KDE Plasma Version: 5.24.1
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Kernel Version: 5.13.0-28-generic (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-7700HQ CPU @ 2.80GHz
Memory: 15.5 GiB of RAM
Comment 3 Nate Graham 2023-01-06 21:01:30 UTC
*** Bug 461503 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2023-01-06 21:01:35 UTC
*** Bug 463661 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2023-10-01 17:59:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1750
Comment 6 Jure Repinc 2024-02-18 10:52:57 UTC
*** Bug 481474 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2024-03-07 22:00:51 UTC
*** Bug 482740 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2024-04-12 02:09:53 UTC
*** Bug 484325 has been marked as a duplicate of this bug. ***
Comment 9 amgad elsaiegh 2024-07-16 15:45:15 UTC
the problem still exists, i tried fedora 40 and Kubuntu 24.04, this bug is so annoying!!
Comment 10 Nate Graham 2024-07-27 21:59:29 UTC
*** Bug 485852 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2024-07-27 21:59:34 UTC
*** Bug 489885 has been marked as a duplicate of this bug. ***
Comment 12 Bug Janitor Service 2024-08-01 06:06:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6191
Comment 13 Bug Janitor Service 2024-08-01 19:24:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4574
Comment 14 Bug Janitor Service 2024-08-01 19:24:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4574
Comment 15 fanzhuyifan 2024-08-07 16:44:47 UTC
Git commit 7752db3a882b5432d7d5c0b118acf42eeb3a8aee by Yifan Zhu.
Committed on 07/08/2024 at 16:29.
Pushed by fanzhuyifan into branch 'master'.

screenedge: allow activating clients in drag and drop

In particular, this allows dragging onto autohide and dogde-window
panels.

M  +1    -1    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/-/commit/7752db3a882b5432d7d5c0b118acf42eeb3a8aee
Comment 16 fanzhuyifan 2024-08-07 17:11:33 UTC
Git commit 72e963100eb630771a9f2b7ce57375a7ddc0f59f by Yifan Zhu.
Committed on 07/08/2024 at 16:31.
Pushed by fanzhuyifan into branch 'master'.

shell/panelview: restart unhide timer on drag leave

Otherwise the autohide and dodge windows panels don't rehide when
leaving them during drag and drop.

M  +4    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/72e963100eb630771a9f2b7ce57375a7ddc0f59f
Comment 17 Bug Janitor Service 2024-08-07 17:12:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4590
Comment 18 fanzhuyifan 2024-08-07 17:20:04 UTC
Git commit d85dd623d7315f2e620c2c37e635f2fd3737a684 by Yifan Zhu.
Committed on 07/08/2024 at 16:54.
Pushed by fanzhuyifan into branch 'Plasma/6.1'.

screenedge: allow activating clients in drag and drop

In particular, this allows dragging onto autohide and dogde-window
panels.


(cherry picked from commit 7752db3a882b5432d7d5c0b118acf42eeb3a8aee)

Co-authored-by: Yifan Zhu <fanzhuyifan@gmail.com>

M  +1    -1    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/-/commit/d85dd623d7315f2e620c2c37e635f2fd3737a684
Comment 19 fanzhuyifan 2024-08-07 17:40:33 UTC
Git commit 84d0555e4484cde0cfd41c63047b69381e511767 by Yifan Zhu.
Committed on 07/08/2024 at 17:12.
Pushed by fanzhuyifan into branch 'Plasma/6.1'.

shell/panelview: restart unhide timer on drag leave

Otherwise the autohide and dodge windows panels don't rehide when
leaving them during drag and drop.


(cherry picked from commit 72e963100eb630771a9f2b7ce57375a7ddc0f59f)

Co-authored-by: Yifan Zhu <fanzhuyifan@gmail.com>

M  +4    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/84d0555e4484cde0cfd41c63047b69381e511767
Comment 20 fanzhuyifan 2024-08-12 04:21:22 UTC
*** Bug 491596 has been marked as a duplicate of this bug. ***