screenedge: allow activating clients in drag and drop

In particular, this allows dragging onto autohide and dogde-window
panels.

BUG: 450579